--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,19 @@
-name: basic CI workflow
-#when the workflow should run
+name: Basic CI Workflow
+
+# When the workflow should run
 on:
-push:
-branches: ["main"]
-pull request:
-branches: ["main"]
+  push:
+    branches: ["main"]
+  pull_request:
+    branches: ["main"]
+
 jobs:
-build:
-runs-on:ubuntu_latest
--name:Checkoutrepository
-uses:actions/checkout@v4
--name:display message
-run:echo"github actions workflow is running successfully!"
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Display message
+        run: echo "GitHub Actions workflow is running successfully!!"
